[metadata]
name = pg-sk-examples
version = 0.1.0
description = Semantic Kernel examples using Postgres
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    psycopg[binary,pool] ~= 3.2
    click ~= 8.0
    requests ~= 2.26
    azure-identity ~= 1.13
    semantic-kernel ~= 1.21

[options.packages.find]
include = pg_sk_examples

[options.entry_points]
console_scripts =
    pg-sk-examples = pg_sk_examples.main:cli
